<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gwu.metroexplorer.activity.MainActivity">
    <!--Created by Baosheng Feng-->

    <Button
        android:id = "@+id/nearest_station"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/mainactivity_nearest"
        android:textSize = "32dp"
        android:textColor = "#000000"
        android:layout_centerHorizontal="true"
        android:layout_above = "@id/select_station"
        android:padding = "16dp" />

    <Button
        android:id = "@+id/select_station"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/mainactivity_select"
        android:textSize = "32dp"
        android:textColor = "#000000"
        android:layout_centerInParent="true"
        android:padding = "16dp" />


    <Button
        android:id = "@+id/favorites"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/mainactivity_favorites"
        android:textSize="32dp"
        android:textColor = "#000000"
        android:layout_below = "@id/select_station"
        android:layout_centerHorizontal="true"
        android:padding = "16dp" />

</RelativeLayout>
